--- a/index.html
+++ b/index.html
@@ -3,14 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Practice Htlm</title>
+  <title>My Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 
+<!--Section: Intro-->
+
+<header>
+  <h1>Nayeem Ahmed</h1>
+  <p>Web developer and Lecturer of Computer Science</p>
+  <hr>
+</header>
+
+<!--Section: About me-->
 
 
-<script src="app.js"></script>
+
+<!--Section: Skills-->
+
+
+<!--Section: Contacts-->
+
 </body>
 </html>
