--- a/index.html
+++ b/index.html
@@ -9,22 +9,92 @@
 <body>
 
 
-<!--Section: Intro-->
+<!--Section: navbar-->
 
-<header>
+<nav>
+  <ul>
+    <li><a href="#about">About Me</a></li>
+    <li><a href="#skill">My Skill</a></li>
+    <li><a href="#project">My Project</a></li>
+    <li><a href="#contact">Contact Me</a></li>
+  </ul> 
+</nav>
+
+<!--Section: Intro-->
+<header id="intro">
   <h1>Nayeem Ahmed</h1>
-  <p>Web developer and Lecturer of Computer Science</p>
+  <p><em>Web developer and Lecturer of Computer Science</em></p>
+  <img src="images/1685337748040.jpeg" alt="Nayeem Ahmed" height="160px">
   <hr>
 </header>
 
 <!--Section: About me-->
-
+<section id="about">
+  <h2>About Me</h2>
+  <p> <strong>Experience:</strong> 5 years experience in web development</p>
+  <p> <strong>Education:</strong> Honours in Software Engineer</p>
+</section>
 
 
 <!--Section: Skills-->
 
+<section id="skill">
+  <h2>Skills</h2>
+  <table border="1" cellpadding="5" cellspacing="0">
+    <tr>
+      <th>Technology</th>
+      <th>Proficiency</th>
+    </tr>
+    <tr>
+      <td>HTML</td>
+      <td>Expert</td>
+    </tr>
+    <tr>
+      <td>CSS</td>
+      <td>Expert</td>
+    </tr>
+    <tr>
+      <td>JavaScript</td>
+      <td>Expert</td>
+    </tr>
+  </table>
+</section>
+
+
+<!--Section: Projects-->
+<section id="project">
+<h2>Projects</h2>
+<ol>
+  <li> <a href="https://github.com/nayem-ahmed1/portfolio-html" target="_blank"> Portfolio Website</a></li>
+  <li>Blog Website</li>
+  <li>E-Commerce Website</li>
+</ol>
+</section>
+
 
 <!--Section: Contacts-->
+
+<section id="contact">
+  <h2>Contact Me</h2>
+  <form>
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email">
+
+    <button type="submit">Submit</button>
+    <button type="reset">Reset</button>
+  </form>
+</section>
+
+<!--Section: footer-->
+
+<footer>
+  <p>Copyright reserved by &copy; Nayeem 2024</p>
+  <a href="tel: 01943837764">Call me</a>
+  <a href="mailto:nayeemahmed1@gmail.com">Email me</a>
+</footer>
 
 </body>
 </html>
